// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckControl /> ref should work 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c7 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c7~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c16 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c7 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c10 c2"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c13 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c16 c2"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> should pass custom props 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c2 {
  margin-top: 20px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c5 {
  margin-left: 30;
  margin-right: 30;
}

.c7 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c7~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c8 {
  padding-top: 20px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c16 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 c2"
  id="id"
>
  <div
    aria-required="true"
    class="poodle-box c0 poodle-check-control__control c4 c5"
  >
    <input
      aria-checked="true"
      class="poodle-box c0 poodle-check-control__input c7 c8"
      id="poodle-check-control-1"
      type="radio"
    />
    <div
      aria-hidden="true"
      aria-required="true"
      class="poodle-box c0 poodle-check-control__icon c10 c5"
      data-render-icon="true"
    />
  </div>
  <label
    aria-required="true"
    class="poodle-box c0 poodle-check-control__label c13 c5"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c16 c17"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> should render CheckControl correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c7 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c7~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c16 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c7 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c10 c2"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c13 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c16 c2"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> should render control 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c7 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c7~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c16 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c7 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c10 c2"
      data-render-icon="true"
    >
      <span>
        Icon
      </span>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c13 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c16 c2"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> size Should render with size l correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c7 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c7~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.75rem;
  height: 1.75rem;
  width: 1.75rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.75rem;
  padding-left: 1.75rem;
}

.c16 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c7 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c10 c2"
      data-render-icon="true"
    >
      <span>
        Icon
      </span>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c13 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c16 c2"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> size Should render with size m correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c7 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c7~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c16 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c7 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c10 c2"
      data-render-icon="true"
    >
      <span>
        Icon
      </span>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c13 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c16 c2"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> size Should render with size s correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c7 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c7~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.25rem;
  height: 1.25rem;
  width: 1.25rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.25rem;
  padding-left: 1.25rem;
}

.c16 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c7 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c10 c2"
      data-render-icon="true"
    >
      <span>
        Icon
      </span>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c13 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c16 c2"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> theming should disable classes 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c3:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c6 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c6~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c6:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c6:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c6:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c6:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c15 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1"
>
  <div
    class="poodle-box c0 poodle-check-control__control c3 c1"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c6 c1"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c9 c1"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c12 c1"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c15 c1"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> theming should extend styles in global 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
  margin-top: 10px;
  text-indent: 1px;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
  margin-top: 11px;
  text-indent: 2px;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c7 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
  margin-top: 13px;
  text-indent: 4px;
}

.c7~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
  margin-top: 12px;
  text-indent: 3px;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
  margin-top: 14px;
  text-indent: 5px;
}

.c16 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c7 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c10 c2"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c13 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c16 c2"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> theming should extend styles in local 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
  margin-top: 10px;
  text-indent: 1px;
  bottom: 200px;
  letter-spacing: 210px;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
  margin-top: 11px;
  text-indent: 2px;
  bottom: 201px;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c7 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
  margin-top: 13px;
  text-indent: 4px;
  bottom: 203px;
}

.c7~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
  margin-top: 12px;
  text-indent: 3px;
  bottom: 202px;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
  margin-top: 14px;
  text-indent: 5px;
  bottom: 204px;
}

.c16 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c7 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c10 c2"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c13 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c16 c2"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> theming should override classes 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c3:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c6 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c6~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c6:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c6:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c6:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c6:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c15 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control morning c1"
>
  <div
    class="poodle-box c0 poodle-check-control__control c3 c1"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c6 c1"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c9 c1"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c12 c1"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c15 c1"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> theming should override styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-top: 50px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c7 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c7~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c16 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c7 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c10 c2"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c13 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c16 c2"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> theming should render with default props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c7 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c7~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c7:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c7:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c16 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 hello c2"
  id="id"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c7 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c10 c2"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c13 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c16 c2"
    >
      label
    </span>
  </label>
</div>
`;
